--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,10 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-
     <div class="navbar-header">
       <%= link_to "<i class='fa fa-circle-o-notch'></i> Stukdo".html_safe, root_path, class:"navbar-brand"%>
-     
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
         <li><%= link_to "Settings", edit_user_registration_path%></li>
@@ -19,6 +14,6 @@
         <li><%=link_to 'Login', new_user_session_path%></li> 
         <% end %>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
