--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-<h1><i class="fa fa-circle-o-notch"></i> Stukdo</h1>
+<h1><i class="fa fa-circle-o-notch"></i> Mike's Do</h1>
 <p>This is my smart to do list Ruby on Rails Application</p>
 <%=link_to "Sign Up",new_user_registration_path, class:"btn btn-primary btn-lg" %>
 </div>
