--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <%= link_to "<i class='fa fa-circle-o-notch'></i> Mike's Do".html_safe, root_path, class:"navbar-brand"%>
+      <%= link_to "<i class='fa fa-circle-o-notch'></i> OrgaTask".html_safe, root_path, class:"navbar-brand"%>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
